modified:   app/config.py 	modified:   app/routes/admin.py 	modified:   app/routes/base_crud.py 	modified:   app/routes/main.py 	modified:   app/services/base_service.py 	modified:   app/services/cat_service.py 	modified:   templates/admin_base.html 	modified:   templates/admin_cats.html 	modified:   templates/admin_users.html

--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -14,12 +14,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin.users') }}">
+                        <a class="nav-link" href="{{ url_for('admin.admin_users_list') }}">
                             <i class="bi bi-people"></i> 用户管理
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin.cats') }}">
+                        <a class="nav-link" href="{{ url_for('admin.admin_cats_list') }}">
                             <i class="bi bi-heart"></i> 猫咪管理
                         </a>
                     </li>
