modified:   app/__init__.py 	modified:   app/routes/cats.py 	modified:   run.py 	modified:   templates/edit_cat.html 	modified:   tests/test_routes.py

--- a/templates/edit_cat.html
+++ b/templates/edit_cat.html
@@ -120,7 +120,7 @@
                         </div>
                         
                         <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-4">
-                            <a href="{{ url_for('cats.detail', id=cat.id) if cat else url_for('cats.admin_cats_list') }}" 
+                            <a href="{{ url_for('cats.detail', id=cat.id) if cat else url_for('cats.admin__list') }}" 
                                class="btn btn-outline-secondary me-md-2">
                                 <i class="bi bi-x-circle"></i> 取消
                             </a>
